// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TasksAndSorsTable component renders latest and original tables when tasksWereUpdated prop is true 1`] = `
<DocumentFragment>
  <h2
    class="lbh-heading-h2 tab-title"
  >
    Tasks and SORs
  </h2>
  <h4
    class="lbh-heading-h4"
  >
    Latest Tasks and SORs Added on 4 Feb 2021, 11:33
  </h4>
  <table
    class="govuk-table lbh-table govuk-!-margin-top-5 latest-tasks-and-sors-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          SOR
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Quantity (est.)
        </th>
        <th
          class="govuk-table__header govuk-table__header--numeric"
          scope="col"
        >
          Unit cost
        </th>
        <th
          class="govuk-table__header govuk-table__header--numeric"
          scope="col"
        >
          Cost (est.)
        </th>
        <th
          class="govuk-table__header govuk-table__header--numeric"
          scope="col"
        >
          Total SMV
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row lbh-body"
        data-row-id="0"
      >
        <td
          class="govuk-table__cell"
        >
          DES5R006
        </td>
        <td
          class="govuk-table__cell"
        >
          Urgent call outs
        </td>
        <td
          class="govuk-table__cell"
        >
          2
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £20.15
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £40.30
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
           50
        </td>
      </tr>
      <tr
        class="govuk-table__row lbh-body"
        data-row-id="1"
      >
        <td
          class="govuk-table__cell"
        >
          DES5R005
        </td>
        <td
          class="govuk-table__cell"
        >
          Normal call outs
        </td>
        <td
          class="govuk-table__cell"
        >
          4
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £1.4
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £5.60
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
           120
        </td>
      </tr>
      <tr
        class="govuk-table__row lbh-body"
        data-row-id="2"
      >
        <td
          class="govuk-table__cell"
        >
          DES5R013
        </td>
        <td
          class="govuk-table__cell"
        >
          Inspect additional sec entrance
        </td>
        <td
          class="govuk-table__cell"
        >
          5
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £7.31
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £36.55
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
           75
        </td>
      </tr>
      <tr
        class="govuk-table__row lbh-body-s"
        data-row-id="3"
      >
        <td
          class="govuk-table__cell border-none"
          colspan="2"
        />
        <td
          class="govuk-table__cell border-none"
        />
        <td
          class="govuk-table__cell govuk-table__cell--numeric border-none"
        >
          <strong>
            Total
          </strong>
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric border-none"
        >
          <strong>
            £82.45
          </strong>
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric border-none"
        >
          <strong>
            245
          </strong>
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <br />
  <section
    class="lbh-collapsible"
  >
    <div
      aria-expanded="false"
      class="lbh-collapsible__button undefined"
    >
      <h3
        class="lbh-heading-h3 lbh-collapsible__heading"
      >
        Original Tasks and SORs
        Added on 3 Feb 2021, 11:33
      </h3>
      <svg
        height="10"
        viewBox="0 0 17 10"
        width="17"
      >
        <path
          d="M2 1.5L8.5 7.5L15 1.5"
          stroke-width="3"
        />
      </svg>
    </div>
    <div
      class="lbh-collapsible__content undefined"
      hidden=""
    >
      <table
        class="govuk-table lbh-table govuk-!-margin-top-5 original-tasks-and-sors-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header"
              scope="col"
            >
              SOR
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Description
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            >
              Quantity (est.)
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              Unit cost
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              Cost (est.)
            </th>
            <th
              class="govuk-table__header govuk-table__header--numeric"
              scope="col"
            >
              Total SMV
            </th>
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row lbh-body"
            data-row-id="0"
          >
            <td
              class="govuk-table__cell"
            >
              DES5R006
            </td>
            <td
              class="govuk-table__cell"
            >
              Urgent call outs
            </td>
            <td
              class="govuk-table__cell"
            >
              1
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              £20.15
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
              £20.15
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric"
            >
               10
            </td>
          </tr>
          <tr
            class="govuk-table__row lbh-body-s"
            data-row-id="1"
          >
            <td
              class="govuk-table__cell border-none"
              colspan="2"
            />
            <td
              class="govuk-table__cell border-none"
            />
            <td
              class="govuk-table__cell govuk-table__cell--numeric border-none"
            >
              <strong>
                Total
              </strong>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric border-none"
            >
              <strong>
                £20.15
              </strong>
            </td>
            <td
              class="govuk-table__cell govuk-table__cell--numeric border-none"
            >
              <strong>
                10
              </strong>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</DocumentFragment>
`;

exports[`TasksAndSorsTable component renders the latest table only, when tasksWereUpdated prop is false 1`] = `
<DocumentFragment>
  <h2
    class="lbh-heading-h2 tab-title"
  >
    Tasks and SORs
  </h2>
  <h4
    class="lbh-heading-h4"
  >
    Latest Tasks and SORs Added on 3 Feb 2021, 11:33
  </h4>
  <table
    class="govuk-table lbh-table govuk-!-margin-top-5 latest-tasks-and-sors-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          SOR
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Quantity (est.)
        </th>
        <th
          class="govuk-table__header govuk-table__header--numeric"
          scope="col"
        >
          Unit cost
        </th>
        <th
          class="govuk-table__header govuk-table__header--numeric"
          scope="col"
        >
          Cost (est.)
        </th>
        <th
          class="govuk-table__header govuk-table__header--numeric"
          scope="col"
        >
          Total SMV
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row lbh-body"
        data-row-id="0"
      >
        <td
          class="govuk-table__cell"
        >
          DES5R006
        </td>
        <td
          class="govuk-table__cell"
        >
          Urgent call outs
        </td>
        <td
          class="govuk-table__cell"
        >
          2
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £20.15
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
          £40.30
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric"
        >
           20
        </td>
      </tr>
      <tr
        class="govuk-table__row lbh-body-s"
        data-row-id="1"
      >
        <td
          class="govuk-table__cell border-none"
          colspan="2"
        />
        <td
          class="govuk-table__cell border-none"
        />
        <td
          class="govuk-table__cell govuk-table__cell--numeric border-none"
        >
          <strong>
            Total
          </strong>
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric border-none"
        >
          <strong>
            £40.30
          </strong>
        </td>
        <td
          class="govuk-table__cell govuk-table__cell--numeric border-none"
        >
          <strong>
            20
          </strong>
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <br />
</DocumentFragment>
`;
